Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV: continue work

--- a/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
@@ -29,11 +29,12 @@
     "1. [Step 1](#step1): Overview of the [Tolman-Oppenheimer-Volkoff (TOV)](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) solution to Einstein's equations\n",
     "1. [Step 2](#step2): Python code for solving the TOV equations using NumPy's ODE solver, outputting the data to a file\n",
     "    1. [Step 2.1](#step2p1): Validation of the TOV output file against a trusted version\n",
-    "1. [Step 3](#step3): C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
-    "    1. [Step 3.1](#step3p1): Reading in the data file, generated in [Step 2](#step2).\n",
-    "    1. [Step 3.2](#step3p2): Interpolating the data to any desired radius\n",
-    "    1. [Step 3.3](#step3p3): Constructing ADM spacetime quantities from the TOV data\n",
-    "    1. [Step 3.4](#step3p4): Constructing $T^{\\mu\\nu}$ from the TOV data"
+    "1. [Step 3](#step3): NRPy+: Load modules and set basic parameters\n",
+    "1. [Step 4](#step4): C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
+    "    1. [Step 4.1](#step4p1): Reading in the data file, generated in [Step 2](#step2).\n",
+    "    1. [Step 4.2](#step4p2): Interpolating the data to any desired radius\n",
+    "    1. [Step 4.3](#step4p3): Constructing ADM spacetime quantities from the TOV data\n",
+    "    1. [Step 4.4](#step4p4): Constructing $T^{\\mu\\nu}$ from the TOV data"
    ]
   },
   {
@@ -323,7 +324,7 @@
    "source": [
     "<a id='step3'></a>\n",
     "\n",
-    "## Step 3: C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
+    "## Step 3: NRPy+: Load modules and set basic parameters\n",
     "$$\\label{step3}$$\n",
     "\\[Back to [top](#top)\\]"
    ]
@@ -332,13 +333,180 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "import sympy as sp\n",
+    "import NRPy_param_funcs as par\n",
+    "import indexedexp as ixp\n",
+    "import grid as gri\n",
+    "from outputC import *\n",
+    "import reference_metric as rfm\n",
+    "\n",
+    "# All gridfunctions will be written in terms of spherical coordinates (r, th, ph):\n",
+    "r,th,ph = sp.symbols('r th ph', real=True)\n",
+    "\n",
+    "thismodule = \"TOV\"\n",
+    "\n",
+    "DIM = 3\n",
+    "par.set_parval_from_str(\"grid::DIM\",DIM)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='step4'></a>\n",
+    "\n",
+    "## Step 4: C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
+    "$$\\label{step4}$$\n",
+    "\\[Back to [top](#top)\\]\n",
+    "\n",
+    "### Interpolating the TOV data file as needed\n",
+    "\n",
+    "The TOV data file just written stored $\\left(r,\\rho(r),P(r),M(r),e^{\\nu(r)}\\right)$, where $\\rho(r)$ is the total mass-energy density (cf. $\\rho_{\\text{baryonic}}$).\n",
+    "\n",
+    "**METRIC DATA IN TERMS OF ADM QUANTITIES**\n",
+    "\n",
+    "The [TOV line element](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) in *Schwarzschild coordinates* is written (in the $-+++$ form):\n",
+    "$$\n",
+    "ds^2 = - c^2 e^\\nu dt^2 + \\left(1 - \\frac{2GM}{rc^2}\\right)^{-1} dr^2 + r^2 d\\Omega^2.\n",
+    "$$\n",
+    "\n",
+    "In *isotropic coordinates* with $G=c=1$ (i.e., the coordinate system and units we'd prefer to use), the ($-+++$ form) line element is written:\n",
+    "$$\n",
+    "ds^2 = - e^{\\nu} dt^2 + e^{4\\phi} \\left(d\\bar{r}^2 + \\bar{r}^2 d\\Omega^2\\right),\n",
+    "$$\n",
+    "where $\\phi$ here is the *conformal factor*.\n",
+    "\n",
+    "The ADM 3+1 line element for this diagonal metric in isotropic spherical coordinates is given by:\n",
+    "$$\n",
+    "ds^2 = (-\\alpha^2 + \\beta_k \\beta^k) dt^2 + \\gamma_{\\bar{r}\\bar{r}} d\\bar{r}^2 + \\gamma_{\\theta\\theta} d\\theta^2+ \\gamma_{\\phi\\phi} d\\phi^2,\n",
+    "$$\n",
+    "\n",
+    "from which we can immediately read off the ADM quantities:\n",
+    "\\begin{align}\n",
+    "\\gamma_{\\bar{r}\\bar{r}} &= e^{4\\phi}\\\\\n",
+    "\\gamma_{\\theta\\theta} &= e^{4\\phi} \\bar{r}^2 \\\\\n",
+    "\\gamma_{\\phi\\phi} &= e^{4\\phi} \\bar{r}^2 \\sin^2 \\theta \\\\\n",
+    "K_{ij} &= 0 \\\\\n",
+    "\\alpha &= e^{\\nu(\\bar{r})/2} \\\\\n",
+    "\\beta^k &= 0 \\\\\n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Input parameters read in from the TOV data file:\n",
+    "rbar,expnu,exp4phi,P,rho = par.Cparameters(\"REAL\", thismodule, [\"rbar\",\"expnu\",\"exp4phi\",\"P\",\"rho\"])\n",
+    "\n",
+    "# Next construct ADM quantities:\n",
+    "\n",
+    "# *** The physical spatial metric in spherical basis ***\n",
+    "# In isotropic coordinates, \n",
+    "#  gamma_{ij} = e^{4 phi} eta_{ij}, \n",
+    "# where eta is the flat-space 3-metric in spherical coordinates\n",
+    "gammaSphDD = ixp.zerorank2()\n",
+    "gammaSphDD[0][0] = exp4phi\n",
+    "gammaSphDD[1][1] = exp4phi * rbar**2\n",
+    "gammaSphDD[2][2] = exp4phi * rbar**2*sp.sin(th)**2\n",
+    "\n",
+    "# *** The extrinsic curvature in spherical basis ***\n",
+    "# K_{ij} = 0 for the TOV solution\n",
+    "KSphDD = ixp.zerorank2()\n",
+    "\n",
+    "# *** The lapse and shift in spherical basis ***\n",
+    "# alpha = exp^{nu/2} for the TOV solution\n",
+    "# \\beta^i = 0 for the TOV solution\n",
+    "alpha = sp.sqrt(expnu)\n",
+    "beta = ixp.zerorank1()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**STRESS-ENERGY TENSOR $T^{\\mu\\nu}$**\n",
+    "\n",
+    "We will also need the stress-energy tensor $T^{\\mu\\nu}$. [As discussed here](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), the stress-energy tensor is diagonal:\n",
+    "\n",
+    "\\begin{align}\n",
+    "T^t_t &= -\\rho \\\\\n",
+    "T^i_j &= P \\delta^i_j \\\\\n",
+    "\\text{All other components of }T^\\mu_\\nu &= 0.\n",
+    "\\end{align}\n",
+    "\n",
+    "Since $\\beta^i=0$ the inverse metric expression simplifies to (Eq. 4.49 in [Gourgoulhon](https://arxiv.org/pdf/gr-qc/0703035.pdf)):\n",
+    "$$\n",
+    "g^{\\mu\\nu} = \\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & \\frac{\\beta^i}{\\alpha^2} \\\\\n",
+    "\\frac{\\beta^i}{\\alpha^2} & \\gamma^{ij} - \\frac{\\beta^i\\beta^j}{\\alpha^2}\n",
+    "\\end{pmatrix} =\n",
+    "\\begin{pmatrix} \n",
+    "-\\frac{1}{\\alpha^2} & 0 \\\\\n",
+    "0 & \\gamma^{ij}\n",
+    "\\end{pmatrix},\n",
+    "$$\n",
+    "\n",
+    "and since the 3-metric is diagonal we get\n",
+    "\n",
+    "\\begin{align}\n",
+    "\\gamma^{\\bar{r}\\bar{r}} &= e^{-4\\phi}\\\\\n",
+    "\\gamma^{\\theta\\theta} &= e^{-4\\phi}\\frac{1}{\\bar{r}^2} \\\\\n",
+    "\\gamma^{\\phi\\phi} &= e^{-4\\phi}\\frac{1}{\\bar{r}^2 \\sin^2 \\theta}.\n",
+    "\\end{align}\n",
+    "\n",
+    "Thus raising $T^\\mu_\\nu$ yields a diagonal $T^{\\mu\\nu}$\n",
+    "\n",
+    "\\begin{align}\n",
+    "T^{tt} &= -g^{tt} \\rho = \\frac{1}{\\alpha^2} \\rho = e^{-\\nu(\\bar{r})} \\rho \\\\\n",
+    "T^{\\bar{r}\\bar{r}} &= g^{\\bar{r}\\bar{r}} P = \\frac{1}{e^{4 \\phi}} P \\\\\n",
+    "T^{\\theta\\theta} &= g^{\\theta\\theta} P = \\frac{1}{e^{4 \\phi}\\bar{r}^2} P\\\\\n",
+    "T^{\\phi\\phi} &= g^{\\phi\\phi} P = \\frac{1}{e^{4\\phi}\\bar{r}^2 \\sin^2 \\theta} P \n",
+    "\\end{align}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Construct T^{mu nu}:\n",
+    "T4UU = ixp.zerorank2(DIM=4)\n",
+    "\n",
+    "T4UU[0][0] = rho / expnu\n",
+    "for i in range(3):\n",
+    "    T4UU[i+1][i+1] = P / gammaSphDD[i][i]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As all input quantities are functions of $r$, we will simply read the solution from file and interpolate it to the values of $r$ needed by the initial data.\n",
+    "\n",
+    "1. First we define functions ID_TOV_ADM_quantities() and ID_TOV_TUPMUNU() that call the [1D TOV interpolator function](../edit/TOV/tov_interp.h) to evaluate the ADM spacetime quantities and $T^{\\mu\\nu}$, respectively, at any given point $(r,\\theta,\\phi)$ in the Spherical basis. All quantities are defined as above.\n",
+    "1. Next we will construct the BSSN/ADM source terms $\\{S_{ij},S_{i},S,\\rho\\}$ in the Spherical basis\n",
+    "1. Then we will perform the Jacobian transformation on $\\{S_{ij},S_{i},S,\\rho\\}$ to the desired (xx0,xx1,xx2) basis\n",
+    "1. Next we call the *Numerical* Spherical ADM$\\to$Curvilinear BSSN converter function to conver the above ADM quantities to the rescaled BSSN quantities in the desired curvilinear coordinate system: [BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py](../edit/BSSN/ADM_Numerical_Spherical_or_Cartesian_to_BSSNCurvilinear.py); [\\[**tutorial**\\]](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb).\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb to latex\n",
-      "[NbConvertApp] Writing 42938 bytes to Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
+      "[NbConvertApp] Writing 51867 bytes to Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
