Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV: small improvements

--- a/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
+++ b/Tutorial-ADM_and_T4UUmunu_Initial_Data-TOV.ipynb
@@ -29,7 +29,7 @@
     "1. [Step 1](#step1): Overview of the [Tolman-Oppenheimer-Volkoff (TOV)](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation) solution to Einstein's equations\n",
     "1. [Step 2](#step2): Python code for solving the TOV equations using NumPy's ODE solver, outputting the data to a file\n",
     "    1. [Step 2.1](#step2p1): Validation of the TOV output file against a trusted version\n",
-    "1. [Step 3](#step3): NRPy+: Load modules and set basic parameters\n",
+    "1. [Step 3](#step3): Load NRPy+ modules and set basic parameters\n",
     "1. [Step 4](#step4): C code to construct ADM spacetime quantities and $T^{\\mu\\nu}$\n",
     "    1. [Step 4.1](#step4p1): Reading in the data file, generated in [Step 2](#step2).\n",
     "    1. [Step 4.2](#step4p2): Interpolating the data to any desired radius\n",
@@ -324,7 +324,7 @@
    "source": [
     "<a id='step3'></a>\n",
     "\n",
-    "## Step 3: NRPy+: Load modules and set basic parameters\n",
+    "## Step 3: Load NRPy+ modules and set basic parameters\n",
     "$$\\label{step3}$$\n",
     "\\[Back to [top](#top)\\]"
    ]
