StaticTrumpet & TOV tutorial modules: improve formatting and consistency

--- a/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
+++ b/Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb
@@ -26,14 +26,14 @@
     "1. Preliminaries\n",
     "    1. [Step 1](#step1): Import the core NRPy+ modules that we need, set the dimensionality of the grid with parameter $\\text{grid::DIM}$, and declare some of the basic gridfunctions\n",
     "1. The spatial metric $\\gamma_{ij}$\n",
-    "    1. [Step 2.1](#step2): Define the conformal factor $\\psi$\n",
-    "    1. [Step 2.2](#step3): Define and construct nonzero components of $\\gamma_{ij}$\n",
+    "    1. [Step 2.1](#step2p1): Define the conformal factor $\\psi$\n",
+    "    1. [Step 2.2](#step2p2): Define and construct nonzero components of $\\gamma_{ij}$\n",
     "1. Extrinsic curvature $K_{ij}$\n",
-    "    1. [Step 3](#step4): Define and construct nonzero components of $K_{ij}$, at the radius $R_0 = M$\n",
+    "    1. [Step 3](#step3): Define and construct nonzero components of $K_{ij}$, at the radius $R_0 = M$\n",
     "1. Lapse function $\\alpha$ and shift vector $\\beta$\n",
-    "    1. [Step 4](#step5): Construct $\\alpha$ and components of $\\beta$\n",
+    "    1. [Step 4](#step4): Construct $\\alpha$ and components of $\\beta$\n",
     "1. Code Validation\n",
-    "    1. [Step 5](#step6): NRPy+ Module Code Validation"
+    "    1. [Step 5](#step5): NRPy+ Module Code Validation"
    ]
   },
   {
@@ -44,9 +44,8 @@
     "\n",
     "First, we will import the core modules of NRPy that we will need and specify the main gridfunctions we will need. \n",
     "<a id='step1'></a>\n",
-    "\\[Back to [top](#top)\\]\n",
     "\n",
-    "## Step 1: Set up the needed NRPy+ infrastructure and declare core gridfunctions\n",
+    "## Step 1: Set up the needed NRPy+ infrastructure and declare core gridfunctions \\[Back to [top](#top)\\]\n",
     "\n",
     "**Input for initial data**:\n",
     "\n",
@@ -86,10 +85,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2.1: Define the conformal factor $\\psi$\n",
-    "<a id='step2'></a>\n",
-    "$$\\label{step2}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "## Step 2.1: Define the conformal factor $\\psi$ \\[Back to [top](#top)\\]\n",
+    "<a id='step2p1'></a>\n",
+    "$$\\label{step2p1}$$\n",
+    "\n",
     "\n",
     "The conformal factor, defined in equation 13 of [Dennison and Baumgarte (2014)](https://arxiv.org/abs/1403.5484), setting $R_0 = M$,\n",
     "$$ \\psi = \\sqrt{1 + \\frac{M}{r}}. $$"
@@ -113,10 +112,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 2.2: Define and construct nonzero components of $\\gamma_{ij}$\n",
-    "<a id='step3'></a>\n",
-    "$$\\label{step3}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "<a id='step2p2'></a>\n",
+    "\n",
+    "## Step 2.2: Define and construct nonzero components of $\\gamma_{ij}$ \\[Back to [top](#top)\\]\n",
+    "$$\\label{step2p2}$$\n",
     "\n",
     "The spatial metric, defined in equation 15 of [Dennison and Baumgarte (2014)](https://arxiv.org/abs/1403.5484),\n",
     "$$ \\gamma_{ij} = \\psi^4 \\eta_{ij}, $$\n",
@@ -144,10 +143,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 3: Define and construct nonzero components of $K_{ij}$, at the radius $R_0 = M$\n",
-    "<a id='step4'></a>\n",
-    "$$\\label{step4}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "<a id='step3'></a>\n",
+    "\n",
+    "## Step 3: Define and construct nonzero components of $K_{ij}$, at the radius $R_0 = M$ \\[Back to [top](#top)\\]\n",
+    "\n",
+    "$$\\label{step3}$$\n",
     "\n",
     "Components of the extrinsic curvature in spherical basis, defined in equations 19 and 20 of [Dennison and Baumgarte (2014)](https://arxiv.org/abs/1403.5484),\n",
     "\n",
@@ -195,10 +195,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 4: Construct $\\alpha$ and components of $\\beta$\n",
-    "<a id='step5'></a>\n",
-    "$$\\label{step5}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "<a id='step4'></a>\n",
+    "\n",
+    "## Step 4: Construct $\\alpha$ and components of $\\beta$ \\[Back to [top](#top)\\]\n",
+    "$$\\label{step4}$$\n",
     "\n",
     "Laspe function and shift vector components, equation 15 of [Dennison and Baumgarte (2014)](https://arxiv.org/abs/1403.5484), setting $R_0 = M$,\n",
     "$$ \\alpha = \\frac{r}{r+M}, $$\n",
@@ -229,12 +229,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Step 5: NRPy+ Module Code Validation\n",
-    "<a id='step6'></a>\n",
-    "$$\\label{step6}$$\n",
-    "\\[Back to [top](#top)\\]\n",
+    "<a id='step5'></a>\n",
     "\n",
-    "Here, as a code validation check, we verify agreement in the SymPy expressions for UIUC black hole initial data between\n",
+    "## Step 5: NRPy+ Module Code Validation \\[Back to [top](#top)\\]\n",
+    "$$\\label{step5}$$\n",
+    "\n",
+    "Here, as a code validation check, we verify agreement in the SymPy expressions for static trumpet black hole initial data between\n",
     "\n",
     "1. this tutorial and \n",
     "2. the NRPy+ [BSSN.StaticTrumpet](../edit/BSSN/StaticTrumpet.py) module."
@@ -327,7 +327,7 @@
      "output_type": "stream",
      "text": [
       "[NbConvertApp] Converting notebook Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb to latex\n",
-      "[NbConvertApp] Writing 36475 bytes to Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
+      "[NbConvertApp] Writing 36608 bytes to Tutorial-ADM_Initial_Data-StaticTrumpet.tex\n",
       "This is pdfTeX, Version 3.14159265-2.6-1.40.18 (TeX Live 2017/Debian) (preloaded format=pdflatex)\n",
       " restricted \\write18 enabled.\n",
       "entering extended mode\n",
