--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -53,24 +53,27 @@
     "    + **Start-to-Finish Example**: [Numerically Solving the Scalar Wave Equation in Curvilinear Coordinates: A Complete C Code](Tutorial-Start_to_Finish-ScalarWaveCurvilinear.ipynb)\n",
     "+ **Start-to-Finish Example**: [Implementation of Curvilinear Boundary Conditions, Including for Tensorial Quantities](Tutorial-Start_to_Finish-Curvilinear_BCs.ipynb)\n",
     "+ Application: [Maxwell's Equations in Curvilinear Coordinates, using a Reference Metric](Tutorial-MaxwellCurvilinear.ipynb) (*Courtesy Ian Ruchlin*)\n",
-    "+ Application: [General Relativity in the BSSN Formalism, in singular curvilinear coordinates](Tutorial-BSSNCurvilinear.ipynb)\n",
-    "    + *Initial data modules*:\n",
+    "\n",
+    "### PART 4: Numerical Relativity; BSSN in Curvilinear Coordinates\n",
+    "\n",
+    "+ [**General Relativity in the BSSN Formalism, in singular curvilinear coordinates**](Tutorial-BSSNCurvilinear.ipynb)\n",
+    "    + **Initial data modules**:\n",
     "        + [Non-Spinning (\"static trumpet\") black hole initial data](Tutorial-ADM_Initial_Data-StaticTrumpet.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
     "        + [Spinning (\"UIUC\") Black Hole initial data](Tutorial-ADM_Initial_Data-UIUC_BlackHole.ipynb) (*Courtesy Terrence Pierre Jacques & Ian Ruchlin*)\n",
     "        + [Brill-Lindquist initial data: Two-black-holes released from rest](Tutorial-ADM_Initial_Data-Brill-Lindquist.ipynb)\n",
     "        + [Neutron Star initial data: The Tolman-Oppenheimer-Volkoff (TOV) solution](Tutorial-ADM_Initial_Data-TOV.ipynb) (*Courtesy Phil Chang*)\n",
-    "    + [**Exact** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are known *exactly*. The BSSN quantity $\\lambda^i$ will be computed exactly using SymPy from given ADM quantities.)\n",
-    "        + **Start-to-Finish initial data validation modules**:\n",
-    "            + [Non-Spinning (\"static trumpet\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
-    "            + [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
-    "        + **Start-to-Finish simulation example**:\n",
-    "            + [**Colliding black holes!**](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
-    "    + [**Numerical** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are provided by an initial data solver, and are thus known to roundoff error at best. The BSSN quantity  $\\lambda^i$ will be computed using finite-difference derivatives from given ADM quantities.)\n",
-    "        + **Start-to-Finish initial data validation modules**: (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a validation test for the **numerical** ADM-Spherical-to-BSSN-Curvilinear initial data conversion module. TOV initial data on the other hand are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are truly known only numerically):\n",
-    "            + [Spinning (\"UIUC\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
-    "            + [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
-    "        + **Start-to-Finish simulation example**:\n",
-    "            + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***"
+    "    + **Converting initial data into singular curvilinear coordinates**\n",
+    "        + [**Exact** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Exact_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are known *exactly*. The BSSN quantity $\\lambda^i$ will be computed exactly using SymPy from given ADM quantities.)\n",
+    "            + **Start-to-Finish initial data validation modules**:\n",
+    "                + [Non-Spinning (\"static trumpet\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_Trumpet_BH_initial_data.ipynb) (*Courtesy Terrence Pierre Jacques*)\n",
+    "                + [Two-black-hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_two_BH_initial_data.ipynb)\n",
+    "        + [**Numerical** ADM Spherical/Cartesian to BSSN Curvilinear Initial Data Conversion](Tutorial-ADM_Initial_Data-Converting_Numerical_ADM_Spherical_or_Cartesian_to_BSSNCurvilinear.ipynb) (Use this module for initial data conversion if the initial data are provided by an initial data solver, and are thus known to roundoff error at best. The BSSN quantity  $\\lambda^i$ will be computed using finite-difference derivatives from given ADM quantities.)\n",
+    "            + **Start-to-Finish initial data validation modules**: (Note that UIUC black hole initial data are *exact*; however we choose to set them up as though they were only known numerically, as a validation test for the **numerical** ADM-Spherical-to-BSSN-Curvilinear initial data conversion module. TOV initial data on the other hand are generated via [the solution of a system of ODEs](https://en.wikipedia.org/wiki/Tolman%E2%80%93Oppenheimer%E2%80%93Volkoff_equation), thus are truly known only numerically):\n",
+    "                + [Spinning (\"UIUC\") black hole initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_spinning_UIUC_BH_initial_data.ipynb)\n",
+    "                + [Neutron star (TOV solution) initial data validation: numerical error convergence to zero](Tutorial-Start_to_Finish-BSSNCurvilinear-Setting_up_TOV_initial_data.ipynb)\n",
+    "    + **Start-to-Finish simulation examples**:\n",
+    "        + [<font color='purple'>**Colliding black holes!**</font>](Tutorial-Start_to_Finish-BSSNCurvilinear-Two_BHs_Collide.ipynb)\n",
+    "        + [The \"Hydro without Hydro\" test: evolving the spacetime fields of TOV star with $T^{\\mu\\nu}$ assumed static](Tutorial-Start_to_Finish-BSSNCurvilinear-Neutron_Star-Hydro_without_Hydro.ipynb) ***In progress***\n"
    ]
   }
  ],
