--- a/Tutorial-BSSNConstraints.ipynb
+++ b/Tutorial-BSSNConstraints.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# [BSSN](http://www2.yukawa.kyoto-u.ac.jp/~yuichiro.sekiguchi/3+1.pdf) Hamiltonian and momentum constraint equations, in ***curvilinear*** coordinates, using a covariant reference metric approach: C code generation\n",
     "\n",
+    "### Authors: Ian Ruchlin & Zach Etienne\n",
+    "\n",
     "## Python module containing the final expressions: [BSSN/BSSN_Constraints.py](../edit/BSSN/BSSN_Constraints.py)\n",
     "\n",
     "### ***Citations***: Generic curvilinear coordinate reference metric approach matches that of [Ruchlin, Etienne, and Baumgarte (2018)](https://arxiv.org/abs/1712.07658), which is an extension of the spherical coordinate reference metric approach of [Baumgarte, Montero, Cordero-Carrión, and Müller (2012)](https://arxiv.org/abs/1211.6632), which builds upon the covariant \"Lagrangian\" BSSN formalism of [Brown (2009)](https://arxiv.org/abs/0902.3652). *See also citations within each article.*\n",
@@ -89,16 +91,43 @@
    "source": [
     "## Part 2: $\\mathcal{M}^i$, the momentum constraint\n",
     "\n",
-    "Eq. 14 of [Baumgarte *et al.*](https://arxiv.org/pdf/1211.6632.pdf) for the momentum constraint (which is consistent with Eq 17 of [Brown](https://arxiv.org/pdf/0902.3652.pdf)) is *allegedly* missing the term $e^{-4\\phi} \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}$, which we are not yet including, pending further investigation:\n",
-    "\n",
+    "Start with the physical momentum constraint\n",
+    "$$\n",
+    "\\mathcal{M}^{i} \\equiv D_{j} \\left ( K^{i j} - \\gamma^{i j} K \\right ) = 0 \\; .\n",
+    "$$\n",
+    "Expanding and using metric compatibility with the physical covariant derivative $D_{i}$ yields\n",
+    "$$\n",
+    "\\mathcal{M}^{i} = D_{j} K^{i j} - \\gamma^{i j} \\partial_{j} K \\; .\n",
+    "$$\n",
+    "The physical extrinsic curvature $K_{i j}$ is related to the trace-free extrinsic curvature $A_{i j}$ by\n",
+    "$$\n",
+    "K_{i j} = A_{i j} + \\frac{1}{3} \\gamma_{i j} K \\; .\n",
+    "$$\n",
+    "Thus,\n",
+    "$$\n",
+    "\\mathcal{M}^{i} = D_{j} A^{i j} - \\frac{2}{3} \\gamma^{i j} \\partial_{j} K \\; .\n",
+    "$$\n",
+    "The physical metric $\\gamma_{i j}$ is related to the conformal metric $\\bar{\\gamma}_{i j}$ by the conformal rescaling\n",
+    "$$\n",
+    "\\gamma_{i j} = e^{4 \\phi} \\bar{\\gamma}_{i j} \\; ,\n",
+    "$$\n",
+    "and similarly for the trace-free extrinsic curvature\n",
+    "$$\n",
+    "A_{i j} = e^{4 \\phi} \\bar{A}_{i j} \\; .\n",
+    "$$\n",
+    "It can be shown (Eq. (3.34) in Baumgarte & Shapiro (2010) with $\\alpha = -4$ and $\\psi = e^{\\phi}$) that the physical and conformal covariant derivatives obey\n",
+    "$$\n",
+    "D_{j} A^{i j} = e^{-10 \\phi} \\bar{D}_{j} \\left (e^{6 \\phi} \\bar{A}^{i j} \\right ) \\; .\n",
+    "$$\n",
+    "Then, the constraint becomes\n",
     "$$\n",
     "\\mathcal{M}^i = e^{-4\\phi} \\left(\n",
-    "{\\underbrace {\\textstyle \\frac{1}{\\sqrt{\\bar{\\gamma}}} \\hat{D}_j\\left(\\sqrt{\\bar{\\gamma}}\\bar{A}^{ij}\\right)}_{\\rm Term\\ 1}} + \n",
+    "{\\underbrace {\\textstyle \\bar{D}_j \\bar{A}^{ij}}_{\\rm Term\\ 1}} + \n",
     "{\\underbrace {\\textstyle 6 \\bar{A}^{ij}\\partial_j \\phi}_{\\rm Term\\ 2}} - \n",
-    "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}^{ij}\\partial_j K}_{\\rm Term\\ 3}} + \n",
-    "{\\underbrace {\\textstyle \\bar{A}^{jk} \\Delta\\Gamma^i_{jk} {\\color{red}{+ \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}}}}_{\\rm Term\\ 4}}\\right)\n",
+    "{\\underbrace {\\textstyle \\frac{2}{3} \\bar{\\gamma}^{ij}\\partial_j K}_{\\rm Term\\ 3}}\\right) \\; .\n",
     "$$\n",
-    "Let's first implement Terms 2-4:"
+    "\n",
+    "Let's first implement Terms 2 and 3:"
    ]
   },
   {
@@ -118,53 +147,22 @@
     "trK_dD = ixp.declarerank1(\"trK_dD\") # Not defined in BSSN_RHSs; only trK_dupD is defined there.\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        MU[i] += -sp.Rational(2,3)*bssnrhs.gammabarUU[i][j]*trK_dD[j]\n",
-    "\n",
-    "# Term 4: \\bar{A}^{jk} \\Delta\\Gamma^i_{jk} + \\bar{A}^{ik} \\Delta\\Gamma^j_{jk}\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            MU[i] += bssnrhs.AbarUU[j][k]*bssnrhs.DGammaUDD[i][j][k] \n",
-    "            # Pending further investigation: + bssnrhs.AbarUU[i][k]*bssnrhs.DGammaUDD[j][j][k]"
+    "        MU[i] += -sp.Rational(2,3)*bssnrhs.gammabarUU[i][j]*trK_dD[j]"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\\begin{align}\n",
-    "\\text{Term 1} &= \\frac{1}{\\sqrt{\\bar{\\gamma}}} \\hat{D}_j\\left(\\sqrt{\\bar{\\gamma}}\\bar{A}^{ij}\\right)\\\\\n",
-    "&= {\\underbrace {\\textstyle \\hat{D}_j \\bar{A}^{ij}}_{\\rm Term\\ 1a}} + \n",
-    "{\\underbrace {\\textstyle \\frac{1}{2} \\bar{A}^{ij} \\frac{\\bar{\\gamma}_{,j}}{\\bar{\\gamma}}}_{\\rm Term\\ 1b}}\n",
-    "\\end{align}\n",
-    "\n",
-    "Let's first implement Term 1a, $\\hat{D}_j \\bar{A}^{ij}$:\n",
-    "\n",
-    "Since the \"up-up\" tensor $\\bar{A}^{ij}$ cannot be easily expressed in terms of the BSSN gridfunctions (i.e., the functions we actually sample to take derivatives), we must rewrite Term 1a in terms of derivatives of $\\bar{A}_{ij}$\n",
-    "\\begin{align}\n",
-    "\\hat{D}_j \\bar{A}^{ij} &= \\hat{D}_j \\left(\\bar{\\gamma}^{i\\ell}\\bar{\\gamma}^{jm} \\bar{A}_{\\ell m}\\right)\\\\\n",
-    "&= \n",
-    "{\\underbrace {\\textstyle \\bar{A}_{\\ell m} \\hat{D}_j \\left(\\bar{\\gamma}^{i\\ell}\\bar{\\gamma}^{jm}\\right)}_{\\rm Term\\ 1a.i}} + \n",
-    "{\\underbrace {\\textstyle \\bar{\\gamma}^{i\\ell}\\bar{\\gamma}^{jm}\\hat{D}_j \\bar{A}_{\\ell m}}_{\\rm Term\\ 1a.ii}}.\n",
-    "\\end{align}\n",
-    "\n",
-    "Similarly, the \"up-up\" tensor $\\bar{\\gamma}^{ij}$ cannot be easily expressed in terms of the BSSN gridfunctions, so we must express terms like $\\hat{D}_j\\bar{\\gamma}^{i\\ell}$ in terms of $\\hat{D}_j \\bar{\\gamma}_{i\\ell}$, as computed in the [BSSN RHS tutorial module (needed for $\\bar{R}_{ij}$)](Tutorial-BSSNCurvilinear.ipynb). This is straightforward given the following identity:\n",
-    "\\begin{align}\n",
-    "0 &= \\hat{D}_{k} \\delta_{i}^{j} \\\\\n",
-    "&= \\hat{D}_{k} (\\bar{\\gamma}_{i l} \\bar{\\gamma}^{l j}) \\\\\n",
-    "&= \\bar{\\gamma}^{l j} \\hat{D}_{k} \\bar{\\gamma}_{i l} + \\bar{\\gamma}_{i l} \\hat{D}_{k} \\bar{\\gamma}^{l j} \\\\\n",
-    "\\implies \\bar{\\gamma}_{i l} \\hat{D}_{k} \\bar{\\gamma}^{l j} &= -\\bar{\\gamma}^{l j} \\hat{D}_{k} \\bar{\\gamma}_{i l}\\\\\n",
-    "\\implies \\bar{\\gamma}^{i m} \\bar{\\gamma}_{i l} \\hat{D}_{k} \\bar{\\gamma}^{l j} \n",
-    "&= -\\bar{\\gamma}^{i m} \\bar{\\gamma}^{l j} \\hat{D}_{k} \\bar{\\gamma}_{i l}\\\\\n",
-    "\\implies \\hat{D}_{k} \\bar{\\gamma}^{m j} &= -\\bar{\\gamma}^{i m} \\bar{\\gamma}^{l j} \\hat{D}_{k} \\bar{\\gamma}_{i l}.\n",
-    "\\end{align}\n",
-    "\n",
-    "Next, the covariant derivative $\\hat{D}_j \\bar{A}_{\\ell m}$ is, by definition:\n",
+    "Now, we turn our attention to Term 1. The covariant divergence involves upper indices in $\\bar{A}^{i j}$, but it would be easier for us to finite difference the rescaled $\\bar{A}_{i j}$. A simple application of the inverse conformal metric yields\n",
     "$$\n",
-    "\\hat{D}_j \\bar{A}_{\\ell m} = \\partial_j \\bar{A}_{\\ell m} \n",
-    "- \\hat{\\Gamma}^k_{j\\ell} \\bar{A}_{km}\n",
-    "- \\hat{\\Gamma}^k_{jm}    \\bar{A}_{\\ell k}.\n",
-    "$$"
+    "\\bar{D}_{j} \\bar{A}^{i j} = \\bar{\\gamma}^{i k} \\bar{\\gamma}^{j l} \\bar{D}_{j} \\bar{A}_{k l} \\; .\n",
+    "$$\n",
+    "As usual, the covariant derivative is related to the ordinary derivative using the conformal Christoffel symbols\n",
+    "$$\n",
+    "\\bar{D}_{k} \\bar{A}_{i j} = \\partial_{k} \\bar{A}_{i j} - \\bar{\\Gamma}^{l}_{k i} \\bar{A}_{l j} - \\bar{\\Gamma}^{l}_{k j} \\bar{A}_{i l} \\; .\n",
+    "$$\n",
+    "It is the ordinary derivative above that is approximated by finite difference. The BSSN formulation used here does not rely on spatial derivatives $\\partial_{k} \\bar{A}_{i j}$ in any of the right-hand-sides (except for the advection term, which uses the upwinded derivative), and so we must declare a new ordinary, centered stencil derivative field of rank 3."
    ]
   },
   {
@@ -173,50 +171,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First we implement Term 1a.i:\n",
-    "gammabarUU_dHatD = ixp.zerorank3()\n",
-    "for i in range(DIM):\n",
-    "    for j in range(DIM):\n",
-    "        for k in range(DIM):\n",
-    "            for l in range(DIM):\n",
-    "                for m in range(DIM):\n",
-    "                    gammabarUU_dHatD[m][j][k] += \\\n",
-    "                    -bssnrhs.gammabarUU[i][m]*bssnrhs.gammabarUU[l][j]*bssnrhs.gammabarDD_dHatD[i][l][k]\n",
-    "\n",
-    "# Next we implement Term 1a.ii:\n",
-    "\n",
     "# First define aDD_dD:\n",
-    "AbarDD_dD = ixp.zerorank3()\n",
     "aDD_dD = ixp.declarerank3(\"aDD_dD\",\"sym01\")\n",
+    "\n",
+    "# Then define AbarDD_dD in terms of aDD_dD and other derivatives\n",
+    "AbarDD_dD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
     "        for k in range(DIM):\n",
     "            AbarDD_dD[i][j][k] += aDD_dD[i][j][k]*rfm.ReDD[i][j] + bssnrhs.aDD[i][j]*rfm.ReDDdD[i][j][k]\n",
     "\n",
-    "# Then evaluate \\hat{D}_j \\bar{A}_{lm}\n",
-    "AbarDD_dHatD = ixp.zerorank3()\n",
-    "for j in range(DIM):\n",
-    "    for l in range(DIM):\n",
-    "        for m in range(DIM):\n",
-    "            AbarDD_dHatD[l][m][j] = AbarDD_dD[l][m][j]\n",
-    "            for k in range(DIM):\n",
-    "                AbarDD_dHatD[l][m][j] += -rfm.GammahatUDD[k][j][l]*bssnrhs.AbarDD[k][m]\n",
-    "                AbarDD_dHatD[l][m][j] += -rfm.GammahatUDD[k][j][m]*bssnrhs.AbarDD[l][k]\n",
-    "                \n",
-    "                    \n",
+    "# Then evaluate the conformal covariant derivative \\bar{D}_j \\bar{A}_{lm}\n",
+    "AbarDD_dBarD = ixp.zerorank3()\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        for l in range(DIM):\n",
-    "            for m in range(DIM):\n",
-    "                MU[i] += bssnrhs.AbarDD[l][m]*(gammabarUU_dHatD[i][l][j]*bssnrhs.gammabarUU[j][m] + \n",
-    "                                               bssnrhs.gammabarUU[i][l]*gammabarUU_dHatD[j][m][j]) # Term 1a.i\n",
-    "                MU[i] += bssnrhs.gammabarUU[i][l]*bssnrhs.gammabarUU[j][m]*AbarDD_dHatD[l][m][j]   # Term 1a.ii\n",
+    "        for k in range(DIM):\n",
+    "            AbarDD_dBarD[i][j][k] = AbarDD_dD[i][j][k]\n",
+    "            for l in range(DIM):\n",
+    "                AbarDD_dBarD[i][j][k] += -bssnrhs.GammabarUDD[l][k][i]*bssnrhs.AbarDD[l][j]\n",
+    "                AbarDD_dBarD[i][j][k] += -bssnrhs.GammabarUDD[l][k][j]*bssnrhs.AbarDD[i][l]\n",
     "\n",
-    "# Next we implement Term 1b:\n",
+    "# Term 1: Contract twice with the metric to make \\bar{D}_{j} \\bar{A}^{ij}\n",
     "for i in range(DIM):\n",
     "    for j in range(DIM):\n",
-    "        MU[i] += sp.Rational(1,2)*bssnrhs.AbarUU[i][j]*bssnrhs.detgammabar_dD[j]/bssnrhs.detgammabar\n",
-    "        \n",
+    "        for k in range(DIM):\n",
+    "            for l in range(DIM):\n",
+    "                MU[i] += bssnrhs.gammabarUU[i][k]*bssnrhs.gammabarUU[j][l]*AbarDD_dBarD[k][l][j]\n",
+    "\n",
     "# Finally, we multiply by e^{-4 phi} and the appropriate scale factor.\n",
     "for i in range(DIM):\n",
     "    MU[i] *= bssnrhs.exp_m4phi / rfm.ReU[i]"
@@ -291,21 +272,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
