--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -26,7 +26,7 @@
     "+ [Indexed Expressions (e.g., tensors, pseudotensors, etc.)](Tutorial-Indexed_Expressions.ipynb)\n",
     "+ [Finite Difference Derivatives](Tutorial-Finite_Difference_Derivatives.ipynb)\n",
     "    + Instructional module: [How NRPy+ Computes Finite Difference Derivative Coefficients](Tutorial-How_NRPy_Computes_Finite_Difference_Coeffs.ipynb)\n",
-    "    + **Start-to-Finish Example**: [Finite-Difference Playground: A Complete C Code for Analyzing NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
+    "    + **Start-to-Finish Example**: [Finite-Difference Playground: A Complete C Code for Validating NRPy+-Based Finite Differences](Tutorial-Start_to_Finish-Finite_Difference_Playground.ipynb)\n",
     "\n",
     "### PART 2: Basic Physics Applications \n",
     "##### Leveraging NRPy+ to Numerically Solve PDEs\n",
