NRPyPlus_Tutorial: improve title

--- a/NRPyPlus_Tutorial.ipynb
+++ b/NRPyPlus_Tutorial.ipynb
@@ -14,7 +14,7 @@
     "  gtag('config', 'UA-59152712-8');\n",
     "</script>\n",
     "\n",
-    "## The NRPy+ Tutorial: An Introduction to Software Development for Numerical Relativity... and Beyond!\n",
+    "## The NRPy+ Tutorial: An Introduction to Python-Based Code Generation for Numerical Relativity... and Beyond!\n",
     "\n",
     "**Lead author: [Zachariah B. Etienne](http://math.wvu.edu/~zetienne/)** $\\leftarrow$ Please feel free to email comments, revisions, or errata! \n",
     "\n",
